--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -30,7 +30,7 @@
 
 .pagination {
   overflow: hidden;
-  font-family: $sans-serif-font-family;
+  font-family: $serif-font-family;
   text-align: center;
 }
 
