--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -7,7 +7,7 @@
   margin-top:3px;
   margin-bottom: 1rem;
   color: $light-gray-color;
-  font-family: $sans-serif-font-family;
+  font-family: $serif-font-family;
   font-size:0.8rem;
 }
 
