--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer class="footer">
   {% include social-icons.html %}
   <div class="footer-description"><a href="{{ site.github.url }}/">{{ site.title }} | {{ site.description }} by {{ site.author }}</a></div>
+  <div class=footer-description>Theme: <a href="https://github.com/LeNPaul/Lagrange">Lagrange</a>  </div>
 </footer>
