--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -28,21 +28,21 @@
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   margin-bottom: 4rem;
-  font-family: $sans-serif-font-family;
+  font-family: $almendra-font-family;
 }
 
 .header a:hover {
-  color:black;
+  color:blue;
 }
 
 .header-title a {
   font-size: 2rem;
   text-decoration: none;
-  color: $body-color;
+  color: $black;
 }
 
 .header-subtitle {
-  color: $light-gray-color;
+  color: $black;
 }
 
 /*
@@ -59,7 +59,7 @@
 }
 
 .menu-content a {
-  color: $light-gray-color;
+  color: $black;
   font-size: 1rem;
   padding-right: 10px;
 }
@@ -69,7 +69,7 @@
 }
 
 .social-icons a {
-  color: $light-gray-color;
+  color: $black;
   font-size: 1rem;
 }
 
@@ -88,26 +88,28 @@
 */
 
 .footer {
-  color: $light-gray-color;
+  color: $white;
+  background-color: $black;
   text-align: center;
-  margin: 2rem;
+  //margin: 2rem;
 }
 
 .footer a {
-  color: $light-gray-color;
+  color: $white;
   padding: 10px;
   text-decoration: none;
 }
 
 .footer a:hover {
-  color: $dark-gray-color;
+  color: blue;
 }
 
 .footer-description {
   display: block;
   margin-top:3px;
   margin-bottom: 1rem;
-  color: $light-gray-color;
-  font-family: $sans-serif-font-family;
+  color: $white;
+  background-color: $black;
+  font-family: $almendra-font-family;
   font-size:0.8rem;
 }
