--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,12 +1,12 @@
 ---
 ---
 
-$sans-serif-font-family: "Quattrocento Sans", sans-serif;
-$serif-font-family:      "PT Serif", Georgia, "Times New Roman", serif;
+$almendra-font-family: "Almendra", almendra;
+$serif-font-family:      "Liberation Serif", serif;
 $code-font-family:       "Source Code Pro", monospace;
 
 $body-color:             #505050;
-$link-color:             black;
+$link-color:             blue;
 
 $code-background-color:   #f5f5f5;
 $pagination-button-color: #e0e0e0;
@@ -14,6 +14,9 @@ $pagination-button-color: #e0e0e0;
 $dark-gray-color:        #333;
 $light-gray-color:       #999;
 $extra-light-gray-color: #ccc;
+$black: #000000;
+$white: #fffafa;
+
 
 $container-responsive-width: 768px;
 $elements-responsive-width:  30em;
