--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,6 +28,8 @@
   <link href="{{ site.github.url }}/assets/Webfonts/Fontawesome/css/fontawesome.min.css" rel="stylesheet" />
   <link href="{{ site.github.url }}/assets/Webfonts/Fontawesome/css/brands.min.css" rel="stylesheet" />
   <link href="{{ site.github.url }}/assets/Webfonts/Fontawesome/css/solid.min.css" rel="stylesheet" />
+  <link href="{{ site.github.url }}/assets/Webfonts/Fontawesome/css/fontawesome.css" rel="stylesheet" />
+  <link href="{{ site.github.url }}/assets/Webfonts/Fontawesome/css/solid.css" rel="stylesheet" />
   <script type="text/javascript" async
     <!-- src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"> -->
     src="{{ site.github.url }}/assets/Webfonts/MathJax-2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
@@ -37,8 +39,8 @@
         }
       });
   </script>
-  <!-- Google Analytics -->
-  {% include google-analytics.html %}
+  <!-- Rybbit Analytics -->
+  {% include rybbit-analytics.html %}
   <!-- Use Jekyll SEO plugin -->
   {% seo %}
 </head>
