--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: default
     {% endif %}
     <p>
       {{ post.content | strip_html | truncate: 350 }} <a href="{{ site.github.url }}{{ post.url }}">Czytaj dalej</a>
-      <span class="post-date"><i class="fa fa-calendar" aria-hidden="true"></i> {{ post.date | date_to_string }} - <i class="fa-solid fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</span>
+      <span class="post-date"><i class="fa-solid fa-calendar" aria-hidden="true"></i> {{ post.date | date_to_string }} - <i class="fa-solid fa-clock" aria-hidden="true"></i> {% include read-time.html %}</span>
     </p>
   </div>
 {% endfor %}
