--- a/_sass/_social-icons.scss
+++ b/_sass/_social-icons.scss
@@ -62,7 +62,7 @@
   @include social-media-icon($codepen-color, $icon-transition-time);
 }
 
-.fa-square-rss {
+.fa-rss {
   padding: 5px;
   @include social-media-icon($rss-color, $icon-transition-time);
 }
